# apu_gpio_lib

./: CMakeLists.txt  README.md  apu2_gpio.h
example/: CMakeLists.txt  apu2_gpiod.c  blinky.c  simswap.c
src/: apu2_gpio.c  version.h.in
